--- a/gui.ui
+++ b/gui.ui
@@ -6,16 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>762</width>
-    <height>603</height>
+    <width>770</width>
+    <height>650</height>
    </rect>
+  </property>
+  <property name="font">
+   <font>
+    <family>Roboto</family>
+   </font>
   </property>
   <property name="windowTitle">
    <string>Image Augmenter</string>
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>icon.ico</normaloff>icon.ico</iconset>
+    <normaloff>icon.png</normaloff>icon.png</iconset>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
@@ -32,14 +37,14 @@
     </property>
     <property name="font">
      <font>
-      <family>Trebuchet MS</family>
+      <family>Ubuntu Mono</family>
       <pointsize>55</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
+      <weight>50</weight>
+      <bold>false</bold>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(0, 0, 0);</string>
+     <string notr="true">color: rgb(255, 255, 255);</string>
     </property>
     <property name="text">
      <string>Image Augmenter</string>
@@ -51,8 +56,8 @@
    <widget class="QPushButton" name="augment">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>540</y>
+      <x>430</x>
+      <y>560</y>
       <width>181</width>
       <height>51</height>
      </rect>
@@ -61,7 +66,16 @@
      <string/>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(0, 0, 0);</string>
+     <string notr="true">QPushButton#augment{
+color: rgb(0, 0, 0);
+            background-color: #ffff8d; 
+        }
+        QPushButton#augment:hover {
+            background-color: #ffff00; 
+        }
+        QPushButton#augment:pressed {
+            background-color: #ffea00;
+        }    </string>
     </property>
     <property name="text">
      <string>Augment!</string>
@@ -70,14 +84,23 @@
    <widget class="QPushButton" name="quit">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>540</y>
+      <x>630</x>
+      <y>560</y>
       <width>121</width>
       <height>51</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(0, 0, 0);</string>
+     <string notr="true">QPushButton#quit{
+	        color: rgb(0, 0, 0);
+            background-color: #ff9e80;
+        }
+        QPushButton#quit:hover {
+            background-color: #ff6e40;
+        }
+        QPushButton#quit:pressed {
+            background-color: #ff3d00;
+        }    </string>
     </property>
     <property name="text">
      <string>Quit</string>
@@ -87,14 +110,14 @@
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>270</y>
-      <width>58</width>
+      <y>284</y>
+      <width>61</width>
       <height>25</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>Trebuchet MS</family>
+      <family>Ubuntu Mono</family>
       <pointsize>16</pointsize>
       <weight>50</weight>
       <bold>false</bold>
@@ -102,7 +125,7 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(0, 0, 0);</string>
+     <string notr="true">color: rgb(136, 138, 133);</string>
     </property>
     <property name="text">
      <string>Status</string>
@@ -111,8 +134,8 @@
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>150</y>
+      <x>430</x>
+      <y>170</y>
       <width>321</width>
       <height>381</height>
      </rect>
@@ -121,7 +144,7 @@
      <string notr="true"/>
     </property>
     <property name="currentIndex">
-     <number>3</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -146,27 +169,6 @@
       </property>
       <property name="text">
        <string>Resize </string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_8">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>120</y>
-        <width>121</width>
-        <height>17</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>Trebuchet MS</family>
-        <pointsize>11</pointsize>
-        <weight>50</weight>
-        <bold>false</bold>
-       </font>
-      </property>
-      <property name="text">
-       <string>Crop </string>
       </property>
      </widget>
      <widget class="QLabel" name="label_9">
@@ -194,7 +196,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>160</y>
+        <y>120</y>
         <width>111</width>
         <height>17</height>
        </rect>
@@ -215,7 +217,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>200</y>
+        <y>160</y>
         <width>191</width>
         <height>17</height>
        </rect>
@@ -236,7 +238,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>240</y>
+        <y>200</y>
         <width>211</width>
         <height>17</height>
        </rect>
@@ -257,7 +259,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>280</y>
+        <y>240</y>
         <width>231</width>
         <height>17</height>
        </rect>
@@ -278,7 +280,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>320</y>
+        <y>280</y>
         <width>221</width>
         <height>17</height>
        </rect>
@@ -299,7 +301,7 @@
       <property name="geometry">
        <rect>
         <x>220</x>
-        <y>280</y>
+        <y>240</y>
         <width>89</width>
         <height>25</height>
        </rect>
@@ -325,7 +327,7 @@
       <property name="geometry">
        <rect>
         <x>220</x>
-        <y>320</y>
+        <y>280</y>
         <width>89</width>
         <height>25</height>
        </rect>
@@ -347,33 +349,7 @@
        <string>Push</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="crop">
-      <property name="geometry">
-       <rect>
-        <x>220</x>
-        <y>120</y>
-        <width>89</width>
-        <height>25</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Push</string>
-      </property>
-     </widget>
      <widget class="QPushButton" name="gc">
-      <property name="geometry">
-       <rect>
-        <x>220</x>
-        <y>240</y>
-        <width>89</width>
-        <height>25</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Push</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="hsi">
       <property name="geometry">
        <rect>
         <x>220</x>
@@ -386,11 +362,24 @@
        <string>Push</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="flip">
+     <widget class="QPushButton" name="hsi">
       <property name="geometry">
        <rect>
         <x>220</x>
         <y>160</y>
+        <width>89</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Push</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="flip">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>120</y>
         <width>89</width>
         <height>25</height>
        </rect>
@@ -547,7 +536,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>320</y>
+        <y>319</y>
         <width>191</width>
         <height>17</height>
        </rect>
@@ -649,7 +638,7 @@
       <property name="geometry">
        <rect>
         <x>220</x>
-        <y>320</y>
+        <y>316</y>
         <width>89</width>
         <height>25</height>
        </rect>
@@ -866,7 +855,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>320</y>
+        <y>316</y>
         <width>191</width>
         <height>17</height>
        </rect>
@@ -921,7 +910,7 @@
       <property name="geometry">
        <rect>
         <x>220</x>
-        <y>320</y>
+        <y>316</y>
         <width>89</width>
         <height>25</height>
        </rect>
@@ -1171,14 +1160,14 @@
     <property name="geometry">
      <rect>
       <x>460</x>
-      <y>120</y>
+      <y>130</y>
       <width>241</width>
       <height>25</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>Trebuchet MS</family>
+      <family>Ubuntu Mono</family>
       <pointsize>16</pointsize>
       <weight>50</weight>
       <bold>false</bold>
@@ -1186,7 +1175,7 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(0, 0, 0);</string>
+     <string notr="true">color: rgb(136, 138, 133);</string>
     </property>
     <property name="text">
      <string>Selective Augmentation</string>
@@ -1203,12 +1192,12 @@
     </property>
     <property name="font">
      <font>
-      <family>Trebuchet MS</family>
+      <family>Ubuntu Mono</family>
       <pointsize>15</pointsize>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(0, 0, 0);</string>
+     <string notr="true">color: rgb(136, 138, 133);</string>
     </property>
     <property name="text">
      <string>Image Loading and Preview</string>
@@ -1218,7 +1207,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>170</y>
+      <y>190</y>
       <width>181</width>
       <height>23</height>
      </rect>
@@ -1230,7 +1219,7 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(0, 0, 0);</string>
+     <string notr="true">color: rgb(186, 189, 182);</string>
     </property>
     <property name="text">
      <string>Load an image</string>
@@ -1240,7 +1229,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>230</y>
+      <y>250</y>
       <width>181</width>
       <height>23</height>
      </rect>
@@ -1252,7 +1241,8 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(0, 0, 0);</string>
+     <string notr="true">
+color: rgb(186, 189, 182);</string>
     </property>
     <property name="text">
      <string>Show the Image</string>
@@ -1262,7 +1252,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>300</y>
+      <y>320</y>
       <width>401</width>
       <height>291</height>
      </rect>
@@ -1272,13 +1262,22 @@
     <property name="geometry">
      <rect>
       <x>250</x>
-      <y>170</y>
+      <y>190</y>
       <width>111</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(0, 0, 0);</string>
+     <string notr="true">QPushButton#browse{
+			 color: rgb(0, 0, 0);
+            background-color: rgb(187, 255, 176); 
+        }
+        QPushButton#browse:hover {
+            background-color: rgb(151, 255, 128);
+        }
+        QPushButton#browse:pressed {
+            background-color: rgb(85, 255, 0);
+        }   </string>
     </property>
     <property name="text">
      <string>Browse</string>
@@ -1288,13 +1287,22 @@
     <property name="geometry">
      <rect>
       <x>250</x>
-      <y>230</y>
+      <y>250</y>
       <width>111</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(0, 0, 0);</string>
+     <string notr="true">QPushButton{
+		     color: rgb(0, 0, 0);
+            background-color: #b9f6ca; 
+        }
+        QPushButton:hover {
+            background-color: #69f0ae;
+        }
+        QPushButton:pressed {
+           background-color: #00e676;
+        }    </string>
     </property>
     <property name="text">
      <string>Show</string>
@@ -1304,7 +1312,7 @@
     <property name="geometry">
      <rect>
       <x>72</x>
-      <y>96</y>
+      <y>83</y>
       <width>621</width>
       <height>16</height>
      </rect>
@@ -1317,13 +1325,52 @@
     <property name="geometry">
      <rect>
       <x>303</x>
-      <y>558</y>
+      <y>570</y>
       <width>89</width>
       <height>25</height>
      </rect>
     </property>
     <property name="text">
      <string>Clear</string>
+    </property>
+   </widget>
+   <widget class="Line" name="line_2">
+    <property name="geometry">
+     <rect>
+      <x>64</x>
+      <y>151</y>
+      <width>261</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="line_3">
+    <property name="geometry">
+     <rect>
+      <x>456</x>
+      <y>152</y>
+      <width>241</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="line_4">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>301</y>
+      <width>81</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
     </property>
    </widget>
   </widget>
